--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@ body{
     align-items:center;
     padding-top:80px;
 }
+body{
+    font-family:Poppins,sans-serif;
+    background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+    color:#fff;
+    min-height:100vh;
+    overflow-y:auto;  /* ubah dari hidden → auto */
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    padding-top:80px;
+}
+
+footer{
+    margin-top:auto;
+    padding:6px 0;
+    font-size:0.85rem;
+    color:rgba(255,255,255,0.6);
+    text-align:center;
+    flex-shrink:0; /* memastikan footer tidak ikut shrink */
+}
 
 /* ===== HAMBURGER ===== */
 .hamburger{
@@ -134,6 +154,21 @@ body{
 .card span{font-size:3rem}
 .card h3{margin-top:8px;font-weight:500}
 
+/* ===== FOOTER ===== */
+footer{
+    margin-top:auto;
+    padding:6px 0;
+    font-size:0.85rem;
+    color:rgba(255,255,255,0.6);
+    text-align:center;
+}
+footer a{
+    color:#00ffd5;
+    text-decoration:none;
+}
+body.light footer{color:rgba(0,0,0,0.6);}
+body.light footer a{color:#007777;}
+
 /* ===== LIGHT MODE ===== */
 body.light{
     background:#f4f4f4;
@@ -183,7 +218,7 @@ body.light .menu{color:f4f4f4;}
 <div class="grid-wrapper">
 <div class="grid">
     <!-- Kitab Kajian & Al-Qur'an di atas -->
-    <div class="card" onclick="window.open('https://drive.google.com/drive/folders/1sjlWjXJPVNxYS2aUbFoGubGddqXRmGDU','_blank')">
+    <div class="card" onclick="window.open('https://drive.google.com','_blank')">
         <span>📚</span><h3>Kitab Kajian</h3>
     </div>
     <div class="card" onclick="location.href='quran.html'">
@@ -200,6 +235,11 @@ body.light .menu{color:f4f4f4;}
 </div>
 
 <canvas id="particle"></canvas>
+
+<!-- ===== FOOTER ===== -->
+<footer>
+    © 2026 by <a href="https://www.instagram.com/ra_dhen?igsh=MTJlM2lpMDFmMTBibw==" target="_blank">@ra_dhen</a>
+</footer>
 
 <script>
 const menu = document.getElementById("menu");
