Update link for Kitab Kajian card

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ body.light .menu{color:f4f4f4;}
 <div class="grid-wrapper">
 <div class="grid">
     <!-- Kitab Kajian & Al-Qur'an di atas -->
-    <div class="card" onclick="window.open('https://drive.google.com','_blank')">
+    <div class="card" onclick="window.open('https://drive.google.com/drive/folders/1sjlWjXJPVNxYS2aUbFoGubGddqXRmGDU','_blank')">
         <span>📚</span><h3>Kitab Kajian</h3>
     </div>
     <div class="card" onclick="location.href='quran.html'">
